     CampaignWML syntax.
   * Imagepath function "~ROTATE": Support for rotating by any degree.
 * Graphics
   * Full animations for the Dwarven Thunderer line.
 * Language and i18n:
   * Updated translations: British English, German, Greek, Indonesian,
     Lithuanian, Portuguese, Vietnamese
   * Improved internationalization of notifications on Windows and OS X.
 * Lua API:
   * Added scroll_to_leader field (read/write) to wesnoth.sides table
    elements.
 * Multiplayer:
   * Fixed clearing map data when there is no shroud and level is sent
     with "store_next_scenario".
   * Update game's side data, slots and state in server during next scenario
     initialization.
   * Fixed reserved sides being counted as available in server.
 * WML engine:
   * New [disable] weapon special.
   * New variation_id attribute with the function of former variation_name. 
   * variation_name is now the translatable name of the unit variant.
   * The "variation=" attribute works now in [unit_type] and serves 
     as the default variant. 
   * [store_side] now stores the scroll_to_leader attribute from sides.
   * Added new CampaignWML attributes: "type", "min_players" and "max_players".
   * Added new ScenariowML attributes: "new_game_title",
     "remove_from_carryover_on_leaders_loss" and "force_use_map_settings".
   * Allow numerical values for SideWML "controller" attribute.
   * Allow WML menu items to use hotkeys alongside/instead of the menu.
   * Really added sighted events for ambushing units.
 * User interface:
   * Help Browser:
     * Units with variants are shown as sections with their childs as topics.
     * Links to the siblings in unit variants.
     * Links to the base unit of none variants. 
   * MP "Create" screen has been revamped by moving scenario configuration
     widgets to a new MP "Configure" screen, introducing a description box,
     adding a combo selection for different types of game, and adjusting it to
     work well with MP campaigns.