@@ -478,6 +478,7 @@ wesnoth_sources = Split("""
     storyscreen/interface.cpp
     storyscreen/part.cpp
     storyscreen/render.cpp
+    strftime.cpp
     team.cpp
     terrain_filter.cpp
     tod_manager.cpp
